# agentovka

./: .env.example  .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/hooks/: session-start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: delivery-semantics.md
examples/: README.md  claude_desktop_config.json
scripts/: archive_to_drive.py
src/agentovka_mcp/: __init__.py  archive.py  config.py  deadlines.py  server.py
src/isds_client/: __init__.py  cli.py  client.py  errors.py  models.py  zfo.py
src/isds_client/wsdl/: PROVENANCE.md  __init__.py
tests/: conftest.py  test_archive.py  test_client.py  test_deadlines.py  test_integration.py  test_mcp_server.py  test_zfo.py
