[project]
name = "agentovka"
version = "0.1.0"
description = "Agentic access to Czech data boxes (datové schránky / ISDS) via MCP"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Agentovka contributors" }]
requires-python = ">=3.11"
keywords = ["mcp", "mcp-server", "isds", "datove-schranky", "czech", "egovernment", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Office/Business",
]
dependencies = [
    "zeep>=4.2",
    "pydantic>=2.7",
    "mcp>=1.2",
    "holidays>=0.50",
    "asn1crypto>=1.5",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/matuspavliscak/agentovka"
Repository = "https://github.com/matuspavliscak/agentovka"
Issues = "https://github.com/matuspavliscak/agentovka/issues"

[project.scripts]
agentovka = "agentovka_mcp.server:main"
isds-client = "isds_client.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/isds_client", "src/agentovka_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Test fixtures embed literal ISDS XML that cannot be wrapped.
"tests/conftest.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true
mypy_path = "src"
packages = ["isds_client", "agentovka_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: integration tests against the ISDS test environment (require credentials; run with AGENTOVKA_RUN_INTEGRATION=1)",
]

[tool.coverage.run]
source = ["src"]
